--- a/contato.html
+++ b/contato.html
@@ -105,7 +105,7 @@
 
             <div class="content">
                 <h1>Caso não tenhamos resolvido seu problema ou queira tirar alguma duvida, por favor preencha o <b>formulário a seguir:</b></h1>
-                <form action="/submit_form" method="post">
+                <form action="" method="post">
                     <label for="nome">Nome:</label><br>
                     <input type="text" id="nome" name="nome"><br><br>
                     
